refactor: remove secured url logic and use lombok